src/gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP  # see 'ingress.yaml' - needed to make IP address accessible from outside the cluster
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
