src/gateway/manifests/ingress.yaml
# 'ingress.yaml' is needed to allow traffic (from outside our K8s cluster) to access our gateway endpoint

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  # use the default ingress - with nginx acting as its load balancer
  annotations:  # configurations for nginx ingress
    nginx.ingress.kubernetes.io/proxy-body-size: "0"  # makes sure our ingress allows uploading large files ('0' means any body size)
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: mp3converter.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
